# semtree

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  README.md
.github/workflows/: ci.yml  release.yml
assets/: demo.tape
crates/semtree/: Cargo.toml  README.md
crates/semtree-analyze/: Cargo.toml  README.md
crates/semtree-analyze/src/: lib.rs
crates/semtree-cli/: Cargo.toml  README.md
crates/semtree-cli/src/: main.rs
crates/semtree-cli/src/cmd/: analyze.rs  context.rs  index.rs  init.rs  mod.rs  search.rs  stats.rs
crates/semtree-context/: Cargo.toml
crates/semtree-context/src/: lib.rs
crates/semtree-core/: Cargo.toml  README.md
crates/semtree-core/src/: chunk.rs  config.rs  language.rs  lib.rs  span.rs
crates/semtree-embed/: Cargo.toml  README.md
crates/semtree-embed/src/: embedder.rs  error.rs  fastembed.rs  lib.rs  ollama.rs  openai.rs
crates/semtree-extract/: Cargo.toml
crates/semtree-extract/src/: extractor.rs  lib.rs  rust.rs
crates/semtree-index/: Cargo.toml
crates/semtree-index/src/: lib.rs
crates/semtree-mcp/: Cargo.toml
crates/semtree-mcp/src/: main.rs
crates/semtree-parse/: Cargo.toml  README.md
crates/semtree-parse/src/: error.rs  extractor.rs  lib.rs  parser.rs  text.rs
crates/semtree-parse/src/lang/: go.rs  javascript.rs  mod.rs  python.rs  rust.rs  shared.rs  typescript.rs
crates/semtree-parse/src/lang/queries/: c.scm  cpp.scm  csharp.scm  elisp.scm  go.scm  java.scm  javascript.scm  kotlin.scm  lua.scm  ocaml.scm  php.scm  python.scm  ruby.scm  rust.scm  scala.scm  solidity.scm  swift.scm  tsx.scm  typescript.scm  zig.scm
crates/semtree-parse/tests/: integration.rs
crates/semtree-rag/: Cargo.toml  README.md
crates/semtree-rag/examples/: build_your_own.rs
crates/semtree-rag/src/: context.rs  error.rs  hybrid.rs  indexer.rs  lexical.rs  lib.rs  manifest.rs  registry.rs  search.rs
crates/semtree-rag/tests/: integration.rs
crates/semtree-search/: Cargo.toml
crates/semtree-search/src/: lib.rs
crates/semtree-store/: Cargo.toml  README.md
crates/semtree-store/src/: error.rs  lib.rs  qdrant.rs  store.rs  usearch.rs
crates/semtree-tree/: Cargo.toml
crates/semtree-tree/src/: error.rs  lib.rs  parser.rs
crates/semtree/src/: lib.rs
examples/mcp-server/: Cargo.toml
examples/mcp-server/src/: main.rs
