[workspace]
resolver = "2"
members = [
    "crates/semtree-core",
    "crates/semtree-parse",
    "crates/semtree-embed",
    "crates/semtree-store",
    "crates/semtree-rag",
    "crates/semtree-analyze",
    "crates/semtree-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["rustkit-ai"]
repository = "https://github.com/rustkit-ai/semtree"
keywords = ["semantic-search", "code-intelligence", "embeddings", "rag", "tree-sitter"]
categories = ["development-tools", "text-processing"]

[workspace.dependencies]
# async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# error handling
anyhow = "1"
thiserror = "2"
toml = "0.8"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# tree-sitter
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"

# embeddings
fastembed = "4"

# vector store
usearch = "2"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# internal crates — version required for cargo publish
semtree-core    = { path = "crates/semtree-core",    version = "0.1" }
semtree-parse   = { path = "crates/semtree-parse",   version = "0.1" }
semtree-embed   = { path = "crates/semtree-embed",   version = "0.1" }
semtree-store   = { path = "crates/semtree-store",   version = "0.1" }
semtree-rag     = { path = "crates/semtree-rag",     version = "0.1" }
semtree-analyze = { path = "crates/semtree-analyze", version = "0.1" }
