[package]
name = "semtree-analyze"
description = "Augmented static analysis: dead code, dependency graphs, complexity"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
semtree-core  = { workspace = true }
semtree-parse = { workspace = true }
thiserror       = { workspace = true }
serde           = { workspace = true }
