[package]
name = "semtree-cli"
description = "CLI for semtree: index, search, analyze codebases"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "semtree"
path = "src/main.rs"

[dependencies]
semtree-core  = { workspace = true }
semtree-embed = { workspace = true }
semtree-store = { workspace = true }
semtree-rag   = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
anyhow             = { workspace = true }
clap               = { version = "4", features = ["derive"] }
