[package]
name = "semtree-cli"
description = "CLI for semtree: index, search, analyze codebases"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[[bin]]
name = "semtree"
path = "src/main.rs"

[dependencies]
semtree-core    = { workspace = true }
semtree-embed   = { workspace = true, features = ["openai-backend", "ollama-backend"] }
semtree-store   = { workspace = true, features = ["qdrant-backend"] }
semtree-rag     = { workspace = true }
semtree-analyze = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
anyhow             = { workspace = true }
toml               = { workspace = true }
clap               = { version = "4", features = ["derive"] }
indicatif          = { workspace = true }
