[package]
name = "semtree-extract"
description = "Extract structured chunks from parsed ASTs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
semtree-core = { workspace = true }
semtree-tree = { workspace = true }
tree-sitter = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
