[package]
name = "semtree-index"
description = "Index a codebase: extract, embed and store chunks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
semtree-core    = { workspace = true }
semtree-tree    = { workspace = true }
semtree-extract = { workspace = true }
semtree-embed   = { workspace = true }
semtree-store   = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }
thiserror       = { workspace = true }
serde           = { workspace = true }
