[package]
name = "semtree-mcp"
description = "MCP server exposing semtree capabilities to Claude, Cursor, etc."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "semtree-mcp"
path = "src/main.rs"

[dependencies]
semtree-core    = { workspace = true }
semtree-index   = { workspace = true }
semtree-search  = { workspace = true }
semtree-context = { workspace = true }
semtree-embed   = { workspace = true }
semtree-store   = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
anyhow          = { workspace = true }
