[package]
name = "semtree-parse"
description = "Tree-sitter parsing and chunk extraction for semtree"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
semtree-core        = { workspace = true }
tree-sitter         = { workspace = true }
tree-sitter-rust    = { workspace = true }
tree-sitter-python  = { workspace = true }
tree-sitter-javascript  = { workspace = true }
tree-sitter-typescript  = { workspace = true }
tree-sitter-go      = { workspace = true }
thiserror           = { workspace = true }
serde               = { workspace = true }
