[package]
name = "semtree-parse"
description = "Tree-sitter parsing and chunk extraction for semtree"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
semtree-core        = { workspace = true }
tree-sitter         = { workspace = true }
tree-sitter-rust    = { workspace = true }
tree-sitter-python  = { workspace = true }
tree-sitter-javascript  = { workspace = true }
tree-sitter-typescript  = { workspace = true }
tree-sitter-go      = { workspace = true }
tree-sitter-java    = { workspace = true }
tree-sitter-c       = { workspace = true }
tree-sitter-cpp     = { workspace = true }
tree-sitter-c-sharp = { workspace = true }
tree-sitter-ruby    = { workspace = true }
tree-sitter-php     = { workspace = true }
tree-sitter-kotlin-ng = { workspace = true }
tree-sitter-scala   = { workspace = true }
tree-sitter-swift   = { workspace = true }
tree-sitter-ocaml   = { workspace = true }
tree-sitter-solidity = { workspace = true }
tree-sitter-lua     = { workspace = true }
tree-sitter-zig     = { workspace = true }
tree-sitter-elisp   = { workspace = true }
thiserror           = { workspace = true }
serde               = { workspace = true }
blake3              = { workspace = true }
