[package]
name = "semtree-mcp-example"
description = "Example: expose semtree as an MCP server so AI agents can search a codebase locally"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
# The umbrella crate pulls in the whole default stack, so an example consumer
# depends on one crate instead of four.
semtree = { workspace = true }

rmcp     = { version = "2", features = ["server", "macros", "transport-io"] }
schemars = "1"
serde    = { workspace = true }
tokio    = { workspace = true }
anyhow   = { workspace = true }
tracing-subscriber = { workspace = true }
